--- a/css/loading.css
+++ b/css/loading.css
@@ -1,1 +1,101 @@
 #loading-box .loading-left-bg{position:fixed;z-index:10000000;width:50%;height:100%;background-color:#37474f;-webkit-transition:all .5s;-moz-transition:all .5s;-o-transition:all .5s;-ms-transition:all .5s;transition:all .5s}#loading-box .loading-right-bg{position:fixed;z-index:10000000;width:50%;height:100%;background-color:#37474f;-webkit-transition:all .5s;-moz-transition:all .5s;-o-transition:all .5s;-ms-transition:all .5s;transition:all .5s;right:0}#loading-box .spinner-box{position:fixed;z-index:10000001;display:-webkit-box;display:-moz-box;display:-webkit-flex;display:-ms-flexbox;display:box;display:flex;-webkit-box-pack:center;-moz-box-pack:center;-o-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-box-align:center;-moz-box-align:center;-o-box-align:center;-ms-flex-align:center;-webkit-align-items:center;align-items:center;width:100%;height:100vh}#loading-box .spinner-box .configure-border-1{position:absolute;padding:3px;width:115px;height:115px;background:#ffab91;-webkit-animation:configure-clockwise 3s ease-in-out 0s infinite alternate;-moz-animation:configure-clockwise 3s ease-in-out 0s infinite alternate;-o-animation:configure-clockwise 3s ease-in-out 0s infinite alternate;-ms-animation:configure-clockwise 3s ease-in-out 0s infinite alternate;animation:configure-clockwise 3s ease-in-out 0s infinite alternate}#loading-box .spinner-box .configure-border-2{left:-115px;padding:3px;width:115px;height:115px;background:#3ff9dc;-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg);-webkit-animation:configure-xclockwise 3s ease-in-out 0s infinite alternate;-moz-animation:configure-xclockwise 3s ease-in-out 0s infinite alternate;-o-animation:configure-xclockwise 3s ease-in-out 0s infinite alternate;-ms-animation:configure-xclockwise 3s ease-in-out 0s infinite alternate;animation:configure-xclockwise 3s ease-in-out 0s infinite alternate}#loading-box .spinner-box .loading-word{position:absolute;color:#fff;font-size:.8rem}#loading-box .spinner-box .configure-core{width:100%;height:100%;background-color:#37474f}#loading-box.loaded .loading-left-bg{-webkit-transform:translate(-100%,0);-moz-transform:translate(-100%,0);-o-transform:translate(-100%,0);-ms-transform:translate(-100%,0);transform:translate(-100%,0)}#loading-box.loaded .loading-right-bg{-webkit-transform:translate(100%,0);-moz-transform:translate(100%,0);-o-transform:translate(100%,0);-ms-transform:translate(100%,0);transform:translate(100%,0)}#loading-box.loaded .spinner-box{display:none}@-moz-keyframes configure-clockwise{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}25%{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-o-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}50%{-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}75%{-webkit-transform:rotate(270deg);-moz-transform:rotate(270deg);-o-transform:rotate(270deg);-ms-transform:rotate(270deg);transform:rotate(270deg)}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@-webkit-keyframes configure-clockwise{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}25%{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-o-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}50%{-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}75%{-webkit-transform:rotate(270deg);-moz-transform:rotate(270deg);-o-transform:rotate(270deg);-ms-transform:rotate(270deg);transform:rotate(270deg)}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@-o-keyframes configure-clockwise{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}25%{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-o-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}50%{-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}75%{-webkit-transform:rotate(270deg);-moz-transform:rotate(270deg);-o-transform:rotate(270deg);-ms-transform:rotate(270deg);transform:rotate(270deg)}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@keyframes configure-clockwise{0%{-webkit-transform:rotate(0);-moz-transform:rotate(0);-o-transform:rotate(0);-ms-transform:rotate(0);transform:rotate(0)}25%{-webkit-transform:rotate(90deg);-moz-transform:rotate(90deg);-o-transform:rotate(90deg);-ms-transform:rotate(90deg);transform:rotate(90deg)}50%{-webkit-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg);-ms-transform:rotate(180deg);transform:rotate(180deg)}75%{-webkit-transform:rotate(270deg);-moz-transform:rotate(270deg);-o-transform:rotate(270deg);-ms-transform:rotate(270deg);transform:rotate(270deg)}100%{-webkit-transform:rotate(360deg);-moz-transform:rotate(360deg);-o-transform:rotate(360deg);-ms-transform:rotate(360deg);transform:rotate(360deg)}}@-moz-keyframes configure-xclockwise{0%{-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}25%{-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg)}50%{-webkit-transform:rotate(-135deg);-moz-transform:rotate(-135deg);-o-transform:rotate(-135deg);-ms-transform:rotate(-135deg);transform:rotate(-135deg)}75%{-webkit-transform:rotate(-225deg);-moz-transform:rotate(-225deg);-o-transform:rotate(-225deg);-ms-transform:rotate(-225deg);transform:rotate(-225deg)}100%{-webkit-transform:rotate(-315deg);-moz-transform:rotate(-315deg);-o-transform:rotate(-315deg);-ms-transform:rotate(-315deg);transform:rotate(-315deg)}}@-webkit-keyframes configure-xclockwise{0%{-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}25%{-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg)}50%{-webkit-transform:rotate(-135deg);-moz-transform:rotate(-135deg);-o-transform:rotate(-135deg);-ms-transform:rotate(-135deg);transform:rotate(-135deg)}75%{-webkit-transform:rotate(-225deg);-moz-transform:rotate(-225deg);-o-transform:rotate(-225deg);-ms-transform:rotate(-225deg);transform:rotate(-225deg)}100%{-webkit-transform:rotate(-315deg);-moz-transform:rotate(-315deg);-o-transform:rotate(-315deg);-ms-transform:rotate(-315deg);transform:rotate(-315deg)}}@-o-keyframes configure-xclockwise{0%{-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}25%{-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg)}50%{-webkit-transform:rotate(-135deg);-moz-transform:rotate(-135deg);-o-transform:rotate(-135deg);-ms-transform:rotate(-135deg);transform:rotate(-135deg)}75%{-webkit-transform:rotate(-225deg);-moz-transform:rotate(-225deg);-o-transform:rotate(-225deg);-ms-transform:rotate(-225deg);transform:rotate(-225deg)}100%{-webkit-transform:rotate(-315deg);-moz-transform:rotate(-315deg);-o-transform:rotate(-315deg);-ms-transform:rotate(-315deg);transform:rotate(-315deg)}}@keyframes configure-xclockwise{0%{-webkit-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-ms-transform:rotate(45deg);transform:rotate(45deg)}25%{-webkit-transform:rotate(-45deg);-moz-transform:rotate(-45deg);-o-transform:rotate(-45deg);-ms-transform:rotate(-45deg);transform:rotate(-45deg)}50%{-webkit-transform:rotate(-135deg);-moz-transform:rotate(-135deg);-o-transform:rotate(-135deg);-ms-transform:rotate(-135deg);transform:rotate(-135deg)}75%{-webkit-transform:rotate(-225deg);-moz-transform:rotate(-225deg);-o-transform:rotate(-225deg);-ms-transform:rotate(-225deg);transform:rotate(-225deg)}100%{-webkit-transform:rotate(-315deg);-moz-transform:rotate(-315deg);-o-transform:rotate(-315deg);-ms-transform:rotate(-315deg);transform:rotate(-315deg)}}
+
+#loading-box {
+    position: fixed;
+    z-index: 999998;
+    width: 100%;
+    height: 100%;
+}
+
+.night #loading-box {
+    background-color: rgb(18 18 18 / 80%);
+}
+
+#loading-box .loading-right-bg {
+    right: 0;
+}
+
+#loading-box>.spinner-box {
+    position: fixed;
+    z-index: 999999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+}
+
+#loading-box .spinner-box .loading-word {
+    position: absolute;
+    color: #ffffff;
+    font-size: 0.95rem;
+    transform: translateY(64px);
+    text-align: center;
+}
+
+.loading-title {
+    font-size: 1.7rem;
+    margin: 20px 10px 4px 10px;
+    color: #ffffff;
+}
+
+#loading-box .spinner-box .configure-core {
+    width: 100%;
+    height: 100%;
+    background-color: #37474f;
+}
+
+.loader {
+    width: 64px;
+    height: 64px;
+    position: relative;
+    background: #FFF;
+    border-radius: 50%;
+    transform: rotate(45deg);
+    animation: rotate 2s linear infinite;
+}
+
+.loader:before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 15px;
+    height: 30px;
+    background: #464646;
+    transform: skew(5deg, 60deg) translate(-50%, -5%);
+}
+
+.loader:after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #FFF;
+    transform: translate(-50%, -50%);
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(45deg)
+    }
+
+    30%,
+    50%,
+    70% {
+        transform: rotate(230deg)
+    }
+
+    40%,
+    60%,
+    80% {
+        transform: rotate(240deg)
+    }
+
+    100% {
+        transform: rotate(245deg)
+    }
+}
